--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,7 +256,7 @@ header
   box-shadow: 0px 0px 10px rgba(0,0,0,0.15)!important;
 }
 
-.background-header .logo,
+.background-header, .logo,
 .background-header .main-nav .nav li a {
   color: #1e1e1e!important;
 }
@@ -290,7 +290,6 @@ header
 
 .header-area .main-nav .logo {
   line-height: 100px;
-  color: #fff;
   font-size: 24px;
   font-weight: 700;
   text-transform: uppercase;
