--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ Table of contents
 font & reset css
 --------------------------------------------- 
 */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
 /* 
 ---------------------------------------------
 reset
@@ -115,6 +115,12 @@ html, body {
 
 a {
   text-decoration: none !important;
+  /* color: red; */
+}
+
+#email-address {
+  text-decoration: underline;
+  font-size: 20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -122,12 +128,13 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0px;
 }
 
+
 ul {
   margin-bottom: 0px;
 }
 
 p {
-  font-size: 15px;
+  font-size: 20px;
   line-height: 30px;
   color: #2a2a2a;
 }
@@ -145,7 +152,7 @@ global styles
 html,
 body {
   background: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'EB Garamond', serif;
 }
 
 ::selection {
@@ -1373,7 +1380,7 @@ form#contact {
   border-radius: 20px;
 }
 
-form#contact input {
+form#contact input, select {
   width: 100%;
   height: 46px;
   border-radius: 33px;
@@ -1387,6 +1394,13 @@ form#contact input {
   margin-bottom: 20px;
 }
 
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: '';
+}
+
 form#contact input::placeholder {
   color: #2a2a2a;
 }
@@ -1395,7 +1409,7 @@ form#contact textarea {
   width: 100%;
   min-width: 100%;
   max-width: 100%;
-  max-height: 180px;
+  max-height: 300px;
   min-height: 140px;
   height: 140px;
   border-radius: 20px;
